fix: text-overflowを修正

--- a/src/styles/commentRow.module.css
+++ b/src/styles/commentRow.module.css
@@ -3,14 +3,14 @@
 }
 
 .nameBar {
-  white-space: nowrap;
-  word-wrap: break-word;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-
   display: flex;
   justify-content: space-between;
+}
+
+.names {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .displayName {
